--- a/prices.html
+++ b/prices.html
@@ -9,18 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary-red: #ff0000;
-            --primary-green: #1a472a;
+            --primary-blue: #1a1b29;
+            --secondary-blue: #141522;
+            --accent-blue: #2f3146;
+            --text-blue: #7289da;
             --gold: #ffd700;
-            --premium-gold: linear-gradient(45deg, #ffd700, #ffec8b);
-            --frost-white: rgba(255, 255, 255, 0.9);
+            --white: #ffffff;
         }
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, var(--primary-green) 0%, #2d5a27 50%, #0c1445 100%);
-            background-size: 400% 400%;
-            animation: gradientAnimation 15s ease infinite;
+            background: var(--primary-blue);
             min-height: 100vh;
             margin: 0;
             padding: 20px;
@@ -39,6 +38,7 @@
             position: absolute;
             top: -5vh;
             animation: snowfall linear infinite;
+            opacity: 0.3;
         }
 
         @keyframes snowfall {
@@ -61,7 +61,7 @@
                 var(--gold) 0px 5px,
                 transparent 5px 20px);
             animation: twinkle 1s infinite;
-            opacity: 0.7;
+            opacity: 0.4;
             filter: blur(1px);
         }
 
@@ -72,10 +72,8 @@
 
         h1 {
             font-family: 'Mountains of Christmas', cursive;
-            color: var(--primary-red);
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5),
-                         0 0 15px rgba(255, 255, 255, 0.8),
-                         0 0 5px var(--gold);
+            color: var(--text-blue);
+            text-shadow: 0 0 10px rgba(114, 137, 218, 0.5);
             margin: 20px 0;
             font-size: 3em;
             letter-spacing: 3px;
@@ -83,14 +81,13 @@
         }
 
         .price-list {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
+            background: var(--secondary-blue);
             border-radius: 30px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             padding: 20px;
             margin: 15px auto;
-            max-width: 600px;
-            border: 3px solid rgba(255, 255, 255, 0.2);
+            max-width: 800px;
+            border: 1px solid var(--accent-blue);
             position: relative;
             overflow: hidden;
         }
@@ -115,8 +112,8 @@
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             padding: 15px;
             border-radius: 20px;
-            background: rgba(255, 255, 255, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: var(--accent-blue);
+            border: 1px solid rgba(114, 137, 218, 0.2);
             color: #ffffff;
             position: relative;
         }
@@ -141,9 +138,7 @@
         }
 
         .button-link {
-            background: linear-gradient(45deg, #ff0000, #ff4d4d, #ff0000);
-            background-size: 200% 200%;
-            animation: gradientShift 3s ease infinite;
+            background: var(--text-blue);
             border: none;
             padding: 10px 25px;
             color: white;
@@ -151,7 +146,7 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             border-radius: 30px;
-            box-shadow: 0 5px 15px rgba(255, 0, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(114, 137, 218, 0.3);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -253,11 +248,11 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background: var(--premium-gold);
+            background: var(--text-blue);
             padding: 5px 15px;
             border-radius: 15px;
             font-size: 0.7em;
-            color: #000;
+            color: var(--white);
             font-weight: bold;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             opacity: 0;
@@ -286,10 +281,10 @@
         /* New price tag design */
         .price-tag {
             display: inline-block;
-            background: var(--premium-gold);
+            background: var(--text-blue);
             padding: 5px 15px;
             border-radius: 20px;
-            color: #000;
+            color: var(--white);
             font-weight: bold;
             margin: 10px 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -365,7 +360,7 @@
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="icon"> 
             • 900 ROBUX 
             <br>
-            <a class="button-link" href="https://www.roblox.com/game-pass/970651850" target="_blank">Purchase Robux</a>
+            <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Purchase Robux</a>
         </div>
         <div class="price-item">
             <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
