--- a/prices.html
+++ b/prices.html
@@ -335,7 +335,7 @@
     <!-- Discord/Open Graph Meta Tags -->
     <meta property="og:title" content="🎄 Premium Prices - Christmas Special 🎅">
     <meta property="og:description" content="Check out our special Christmas pricing for Premium access! PayPal, Robux, and Nitro Boost options available.">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1174404879545012275/1307753555116949504/image.png?ex=673b73e8&is=673a2268&hm=76f418e9f2abbef4bdfca724aa9af61ba7c01c28dfbe3b4f7e26d4eaf5b2da5e&">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1174404879545012275/1307764171370135602/image.png?ex=673b7dcb&is=673a2c4b&hm=1dee441ce57715604afa2ad411eb4fb42272dd7082f491f2b1f8bce00022de47&">
     <meta property="og:url" content="[https://akadm1n.github.io/prices.html]">
     <meta property="og:type" content="website">
     <meta property="theme-color" content="#1a472a">
@@ -360,7 +360,7 @@
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="icon"> 
             • 900 ROBUX 
             <br>
-            <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Purchase Robux</a>
+            <a class="button-link" href="https://www.roblox.com/game-pass/970651850" target="_blank">Purchase Robux</a>
         </div>
         <div class="price-item">
             <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
