--- a/supported.html
+++ b/supported.html
@@ -218,9 +218,9 @@
             <h1 class="mega-title typed-title"></h1>
         </header>
 
-        <!-- ULTRA CLEAN Single List -->
+        <!-- ANDROID EXECUTORS -->
         <div class="executor-section" data-aos="fade-up">
-            <h2>Supported Executors ⚡</h2>
+            <h2>Android Executors 📱</h2>
             <table>
                 <tr>
                     <th>Name</th>
@@ -228,24 +228,143 @@
                     <th>Action</th>
                 </tr>
                 <tr>
+                    <td>Hydrogen</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="#" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Evon</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://sakpot.com/android-evon-mobile-executor-roblox-download/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Acreus X Neo</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://spdmteam.com/index?os=android" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
                     <td>Codex</td>
                     <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
-                    <td><a href="#" class="download-btn">Download</a></td>
-                </tr>
-                <tr>
-                    <td>Fluxus</td>
-                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
-                    <td><a href="#" class="download-btn">Download</a></td>
-                </tr>
-                <tr>
-                    <td>Hydrogen</td>
-                    <td><span class="orange-dot">🟠<span class="status-badge">Partial</span></span></td>
-                    <td><a href="#" class="download-btn">Download</a></td>
+                    <td><a href="https://codex.lol/android" class="download-btn">Download</a></td>
                 </tr>
                 <tr>
                     <td>Delta</td>
                     <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
-                    <td><a href="#" class="download-btn">Download</a></td>
+                    <td><a href="https://deltaexploits.gg/delta-executor-mobile" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>VegaX</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://www.vegax.gg/" class="download-btn">Download</a></td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- PC EXECUTORS -->
+        <div class="executor-section" data-aos="fade-up">
+            <h2>PC Executors 💻</h2>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td>Seliware</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://seliware.com/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Xeno</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://discord.gg/getxeno" class="download-btn">Discord</a></td>
+                </tr>
+                <tr>
+                    <td>Wave</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://getwave.gg/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Synapse Z</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://synapsez.net/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Solara</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://getsolara.dev/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>JJsploit</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://wearedevs.net/dInfo/JJSploit" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Zorara</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://wearedevs.net/d/Zorara" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Celery</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="download-btn">Coming Soon</span></td>
+                </tr>
+                <tr>
+                    <td>Cloudy</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="download-btn">Coming Soon</span></td>
+                </tr>
+                <tr>
+                    <td>Atlantis</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="download-btn">Coming Soon</span></td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- iOS EXECUTORS -->
+        <div class="executor-section" data-aos="fade-up">
+            <h2>iOS Executors 📱</h2>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td>Delta</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://deltaexploits.gg/delta-executor-ios" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Apple-ware</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://appleware.dev/" class="download-btn">Download</a></td>
+                </tr>
+                <tr>
+                    <td>Acreus X Neo</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><a href="https://spdmteam.com/index?os=ios" class="download-btn">Download</a></td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- MAC OS EXECUTORS -->
+        <div class="executor-section" data-aos="fade-up">
+            <h2>Mac OS Executors 🍎</h2>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td>Macsploit</td>
+                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td>
+                        <a href="https://abyssdigital.mysellix.io/" class="download-btn">Download</a>
+                        <a href="https://discord.com/invite/macsploit" class="download-btn">Discord</a>
+                    </td>
                 </tr>
             </table>
         </div>
