--- a/supported.html
+++ b/supported.html
@@ -209,6 +209,13 @@
             margin-bottom: 20px;
         }
     </style>
+
+    <!-- Open Graph / Discord Preview Tags -->
+    <meta property="og:title" content="Supported Executors ⚡">
+    <meta property="og:description" content="List of supported executors for Android, PC, iOS, and Mac OS">
+    <meta property="og:image" content="https://raw.githubusercontent.com/akadm1n/akadm1n.github.io/main/preview.png">
+    <meta property="og:url" content="https://akadm1n.github.io/supported.html">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <div id="particles-js"></div>
