--- a/codes.html
+++ b/codes.html
@@ -112,9 +112,21 @@
         <h1>Available Codes</h1>
         <div class="code-list">
             <div class="code-card">
-                <div class="code">150MEMBERS</div>
+                <div class="code">FREEDAY</div>
                 <div class="points">Rewards: 10 Points</div>
-                <button class="copy-btn" onclick="copyCode('150MEMBERS')">Copy Code</button>
+                <button class="copy-btn" onclick="copyCode('FREEDAY')">Copy Code</button>
+            </div>
+
+            <div class="code-card">
+                <div class="code">200MEMBERS</div>
+                <div class="points">Rewards: 20 Points</div>
+                <button class="copy-btn" onclick="copyCode('200MEMBERS')">Copy Code</button>
+            </div>
+
+            <div class="code-card">
+                <div class="code">FIXEDBOT</div>
+                <div class="points">Rewards: 5 Points</div>
+                <button class="copy-btn" onclick="copyCode('FIXEDBOT')">Copy Code</button>
             </div>
         </div>
     </div>
